--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,8 +81,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/relativeLayoutPassword"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingLeft="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_vertical_margin">
 
         <View
             android:layout_width="match_parent"
@@ -107,12 +107,11 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:ems="10"
+            android:singleLine="true"
             android:inputType="textPassword"
             android:maxLength="10"
             android:paddingLeft="20dp"
-            android:textColor="#080808"
-            android:typeface="monospace" />
+            android:textColor="#080808" />
 
     </RelativeLayout>
 
@@ -121,8 +120,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/layout_password1"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="@dimen/input_fields_margins"
+        android:paddingRight="@dimen/input_fields_margins"
         android:layout_marginTop="10dp">
 
         <View
