--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="greyColor">#949191</color>
     <color name="blackColor">#080808</color>
+    <color name="redColor">#F8524A</color>
 </resources>
