--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="input_fields_margins">20dp</dimen>
     <dimen name="margins_sides">5dp</dimen>
     <dimen name="enter_box">70dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
