--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="margins_sides">5dp</dimen>
     <dimen name="enter_box">70dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="hor_scrollview">100dp</dimen>
+    <dimen name="hor_scrollview_text">16sp</dimen>
 
 </resources>
