--- a/app/src/main/res/drawable/selector_bottom1.xml
+++ b/app/src/main/res/drawable/selector_bottom1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/bottom_focused_button1" android:state_focused="true"/>
-    <item android:drawable="@drawable/bottom_button1" android:state_focused="false"/>
+    <item android:drawable="@drawable/bottom_focused_button1" android:state_pressed="true"/>
+    <item android:drawable="@drawable/bottom_focused_button1" android:state_selected="true"/>
+    <item android:drawable="@drawable/bottom_button1" />
 </selector>
